# mcp-template

./: .gitignore  README.md  main.py  pyproject.toml
.llms/docs/: FastMCP_docs_llms.md
src/mcp_template/: __main__.py  config.py  prompts.py  resources.py  server.py  tools.py
src/template_mcp/: config.py  prompts.py  resources.py  server.py  tools.py
