[project]
name = "mcp-template"
version = "0.1.0"
description = "A template for MCP servers using FastMCP 2.6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.6.1",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.9.2",
    "ruff>=0.11.12",
]

[project.scripts]
mcp-template = "mcp_template.__main__:cli"
